--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
 body {
   font-family: "Hina Mincho", sans-serif;
+  user-select: none;
+}
+
+.p-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
 }
 
 .p-header__inner {
@@ -35,6 +44,54 @@ body {
   font-size: 24px;
 }
 
+.l-main {
+  margin-top: 120px;
+}
+.swiper {
+  width: 750px;
+  max-width: 90%;
+}
+
+.swiper img {
+  width: 100%;
+  height: 560px;
+}
+
+.p-swiper__container {
+  width: 1400px;
+  max-width: 90%;
+  margin: 75px auto 0;
+}
+
+.p-swiper__container__label {
+  display: inline-block;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
+.p-swiper__container__label p {
+  text-align: center;
+  font-size: 24px;
+}
+
+.p-swiper__container__label::before {
+  content: "";
+  display: block;
+  width: 160px;
+  height: 3px;
+  margin-bottom: 12px;
+  background-color: #3a3226;
+}
+
+.p-swiper__container__label::after {
+  content: "";
+  display: block;
+  width: 160px;
+  height: 3px;
+  margin-top: 12px;
+  background-color: #3a3226;
+}
+
 .p-intro {
   width: 1400px;
   max-width: 90%;
@@ -44,6 +101,15 @@ body {
 .p-intro ul {
   display: flex;
   justify-content: space-between;
+}
+
+.p-intro li {
+  cursor: pointer;
+}
+
+.p-intro li:hover {
+  transform: scale(1.1);
+  transition-duration: 0.4s;
 }
 
 .p-intro img {
