--- a/css/style.css
+++ b/css/style.css
@@ -122,9 +122,34 @@ body {
 
 @media screen and (max-width:960px){
 
+  .p-header__inner {
+    position: relative;
+  }
+
+  .p-header__inner__site-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    padding-top: 30px;
+    padding-bottom: 50px;
+    background-color: #BDC0BA;
+    display: none;
+  }
+
+  .p-header__inner__site-menu ul {
+    display: block;
+    text-align: center;
+  }
+
+  .p-header__inner__site-menu li:first-child {
+    margin-bottom: 20px;
+  }
+
   .p-swiper__container__label {
     margin-bottom: 40px;
   }
+
   .p-header__inner__toggle-menu-button {
     display: block;
   }
@@ -139,6 +164,15 @@ body {
 }
 
 @media screen and (max-width:520px){
+
+  .p-swiper__container__label::before,
+  .p-swiper__container__label::after {
+    width: 120px;
+  }
+
+  .p-swiper__container__label p {
+    font-size: 16px;
+  }
 
   .p-intro {
     margin-top: 20px;
